# ChangeLog for app-admin/eselect-emacs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-emacs/ChangeLog,v 1.18 2007/06/12 17:41:08 flameeyes Exp $

  12 Jun 2007; Diego Pettenò <flameeyes@gentoo.org>
  eselect-emacs-0.8-r1.ebuild:
  Add ~sparc-fbsd keyword as per bug #174882.

  01 Jun 2007; nixnut <nixnut@gentoo.org> eselect-emacs-0.8-r1.ebuild:
  Stable on ppc wrt bug 180100

  29 May 2007; Raúl Porcel <armin76@gentoo.org>
  eselect-emacs-0.8-r1.ebuild:
  alpha/ia64 stable wrt #180100

  29 May 2007; Jeroen Roovers <jer@gentoo.org> eselect-emacs-0.8-r1.ebuild:
  Stable for HPPA (bug #180100).

  28 May 2007; Christian Faulhammer <opfer@gentoo.org>
  eselect-emacs-0.8-r1.ebuild:
  x86/amd64 stable, bug 180100

  28 May 2007; Brent Baude <ranger@gentoo.org> eselect-emacs-0.8-r1.ebuild:
  marking -0.8-r1 ppc64 stable to support stablization of 180100

  28 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  eselect-emacs-0.8-r1.ebuild:
  Stable on sparc wrt #180100

  15 May 2007; Roy Marples <uberlord@gentoo.org>
  eselect-emacs-0.8-r1.ebuild:
  Added ~x86-fbsd keyword, #174884

  14 May 2007; Markus Ullmann <jokey@gentoo.org>
  eselect-emacs-0.8-r1.ebuild:
  Works on arm as well

  30 Apr 2007; Tony Vroon <chainsaw@gentoo.org> eselect-emacs-0.8-r1.ebuild:
  Add ~ppc keyword. Tested on a PowerBook 5,9 with GCC 4.1.2

  21 Apr 2007; Markus Rothe <corsair@gentoo.org>
  eselect-emacs-0.8-r1.ebuild:
  Added ~ppc64; bug #174882

  19 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  eselect-emacs-0.8-r1.ebuild:
  Change HOMEPAGE to the new project page

  19 Apr 2007; Bryan Østergaard <kloeri@gentoo.org>
  eselect-emacs-0.8-r1.ebuild:
  Add ~alpha keyword, bug 174882.

  18 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  eselect-emacs-0.8-r1.ebuild:
  Keyworded ~sparc wrt #174882

  18 Apr 2007; Jeroen Roovers <jer@gentoo.org> eselect-emacs-0.8-r1.ebuild:
  Marked ~hppa (bug #174882).
