@@ -2,14 +2,19 @@
 Hash: SHA1
 
 DIST eselect-emacs-0.8.tar.bz2 2982 RMD160 f5274d16c90b9d2ee971978ca5377c2a089436b9 SHA1 f0867bedd91ed31e8f6927e77646b6c379a26874 SHA256 fdd604f41146a1630455abaf5a2b87aaf2f433b52ef0c1df52285b41ad164405
+DIST eselect-emacs-1.0.tar.bz2 3291 RMD160 bd84163f6aa2abc47c3fb6470b00f27b7a478dc6 SHA1 9802d56364daf3a142b6869534b6a57c087d4461 SHA256 bf4da4aa6b6c353a60bfc918704c0a017af2a0047561b1975abad8e4f02ac12e
 EBUILD eselect-emacs-0.8-r1.ebuild 682 RMD160 6e67b599e81536a5155c668276e0cc037e990482 SHA1 06d60dc2000156a26ba4eb9506d0e47c2f656cdc SHA256 295f9cb1bea3e8c50c9f9adab48756ca01a7d629f07c50327a2f7c4ab1399cb3
 MD5 cca354e66cbe5a6ca26066a516f265ee eselect-emacs-0.8-r1.ebuild 682
 RMD160 6e67b599e81536a5155c668276e0cc037e990482 eselect-emacs-0.8-r1.ebuild 682
 SHA256 295f9cb1bea3e8c50c9f9adab48756ca01a7d629f07c50327a2f7c4ab1399cb3 eselect-emacs-0.8-r1.ebuild 682
-MISC ChangeLog 2542 RMD160 31939b42fe5968c42e0f3bd0f8e29817a43b99bc SHA1 70487a3f0f816aa2273e093c63f8b9a79a5ccd3d SHA256 095530928cf6531ad8ebc5b3cb70574abbba26c6e6f14e01a999058b13ea763a
-MD5 301d04767839851daac47a554c9a21f1 ChangeLog 2542
-RMD160 31939b42fe5968c42e0f3bd0f8e29817a43b99bc ChangeLog 2542
-SHA256 095530928cf6531ad8ebc5b3cb70574abbba26c6e6f14e01a999058b13ea763a ChangeLog 2542
+EBUILD eselect-emacs-1.0.ebuild 682 RMD160 7df48d4f5d67575c681cb93db3b4eaaa5b5d8387 SHA1 01ee4a8539d004400dd20f3ad35067b0f4242981 SHA256 9141e7fc4aeea6e4c90f1199a1acc5b80e307b04b501b06c087d74be5a925ca2
+MD5 c034faee53a8492174150cb8af30608b eselect-emacs-1.0.ebuild 682
+RMD160 7df48d4f5d67575c681cb93db3b4eaaa5b5d8387 eselect-emacs-1.0.ebuild 682
+SHA256 9141e7fc4aeea6e4c90f1199a1acc5b80e307b04b501b06c087d74be5a925ca2 eselect-emacs-1.0.ebuild 682
+MISC ChangeLog 2792 RMD160 edb71274e8dfb6a7deb9feed700ee7200e33e5be SHA1 c0345a4c6ab98c32eb067d4ff2d4ad8476067c37 SHA256 70f1386d1e26360e1fedccdffd61df710a90508deb370c9c071a1ef87caf8a76
+MD5 23fffa7141751f54210ada717b0051de ChangeLog 2792
+RMD160 edb71274e8dfb6a7deb9feed700ee7200e33e5be ChangeLog 2792
+SHA256 70f1386d1e26360e1fedccdffd61df710a90508deb370c9c071a1ef87caf8a76 ChangeLog 2792
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
@@ -17,10 +22,13 @@ SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab metadata
 MD5 a91268e7d67de90197d074dd63a099a9 files/digest-eselect-emacs-0.8-r1 250
 RMD160 5975a66b7aa2e20455da7fb6bbb46e82de6027e0 files/digest-eselect-emacs-0.8-r1 250
 SHA256 eb302df1ab150b496b9363a3997a0eb0f7a8eee5ef7daad0c6c196c8317a1945 files/digest-eselect-emacs-0.8-r1 250
+MD5 fbed958f745379a5ba0ee9906de52be2 files/digest-eselect-emacs-1.0 250
+RMD160 1647615d3b557e257247a6411d2b2bbfb2c94122 files/digest-eselect-emacs-1.0 250
+SHA256 235a37da799a637e370064284958942af0fc3723bc616f0e6a71e3945c02155d files/digest-eselect-emacs-1.0 250
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.4 (GNU/Linux)
+Version: GnuPG v1.4.7 (GNU/Linux)
 
-iD8DBQFGbtrOAiZjviIA2XgRAsZWAKDUJ+D4KXFdv/FbzOcOwxyhSDl8PwCg021R
-x6In/fk40+TqWGtVOyDeiI4=
-=yfFa
+iD8DBQFGdX74Oeoy/oIi7uwRAh/hAJ9SnC7ODCxmBIJacslXqgewhhuY2gCcClAw
+hVDLRXkSWJpjujo83bFl0UQ=
+=z8j3
 -----END PGP SIGNATURE-----
