@@ -1,0 +1,3 @@
+MD5 4a73bb60bea24562e7428c49423182d3 eselect-emacs-1.0.tar.bz2 3291
+RMD160 bd84163f6aa2abc47c3fb6470b00f27b7a478dc6 eselect-emacs-1.0.tar.bz2 3291
+SHA256 bf4da4aa6b6c353a60bfc918704c0a017af2a0047561b1975abad8e4f02ac12e eselect-emacs-1.0.tar.bz2 3291
